--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "x-tag-spinner",
   "description": "",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "keywords": [
     "web-components",
     "x-tag"
@@ -11,6 +11,7 @@
     "src/main.css"
   ],
   "dependencies": {
-    "x-tag-core": "*"
+    "x-tag-core": "*",
+    "x-tag-transitions": "*"
   }
 }
